--- a/config.yml
+++ b/config.yml
@@ -1,27 +1,27 @@
-baseURL: https://githubuser.github.io
+baseURL: https://panyue1359.github.io
 languageCode: en-us
-title: Linus Torvalds
+title: Res_Work Graph
 theme: "PaperMod"
 
 params:
   homeInfoParams:
-    Title: Sup bruh 😎
-    Content: This is something shows in your homepage.
+    Title: Welcome Home 😎
+    Content: Enjoy!
 
   socialIcons: # optional
     - name: "github"
       url: "https://github.com/XXX"
     # - name: "youtube"
     #   url: "https://www.youtube.com/channel/XXX"
-    - name: "twitter"
-      url: "https://twitter.com/XXX"
+    # - name: "twitter"
+    #   url: "https://twitter.com/XXX"
     # - name: "kofi"
     #   url: "https://buymeacoffee.com/XXX"
     # - name: "rss"
     #   url: "https://XXX.github.io/index.xml"
   ShowReadingTime: true
-  author: "Linus Torvalds"
-  contact: "LinusT@example.com"
+  author: "Pan Yue"
+  #contact: "13132107860@163.com"
   feedlinks: true
   copyright: "<!--Creative Commons License-->This site is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License](https://creativecommons.org/licenses/by-sa/4.0/).<!--/Creative Commons License-->"
   mobileMenu: true
