--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://panyue1359.github.io
+baseURL: https://panyue1359.github.io/work_hugo/
 languageCode: en-us
 title: Res_Work Graph
 theme: "PaperMod"
